--- a/style.css
+++ b/style.css
@@ -82,6 +82,23 @@ body {
    font-style: normal;
 }
 
+.stop-war {
+  height: 100px;
+  background-color: #ececec;
+  width: 100%;
+  display: flex;
+}
+.stop-war__img {
+  width: 107px;
+}
+
+.stop-war__text {
+  font-size: 90px;
+  color: black;
+  font-weight: 900;
+  margin: 0 auto;
+}
+
 .visually-hidden {
 	position: absolute !important;
 	clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
@@ -104,7 +121,7 @@ ul {
 /* HEADER */
 
 .header {
-  padding: 20px 100px;
+  padding: 10px 100px;
   display: flex;
   justify-content: space-between;
 }
@@ -115,7 +132,7 @@ ul {
 }
 
 .header__logo-img {
-  width: 150px;
+  width: 100px;
   height: auto;
 }
 
@@ -134,7 +151,7 @@ ul {
 
 .nav__link {
   color: #a0a0a0;
-  font-size: 38px;
+  font-size: 33px;
 }
 
 .nav__link:hover {
@@ -148,10 +165,10 @@ ul {
   display: flex;
   align-items: center;
   justify-content: space-around;
-   height: 100%;
-   background-color: rgba(0,0,0, 0.4);
-   padding: 50px;
-   margin-bottom: 50px;
+  height: 100%;
+  background-color: rgba(0,0,0, 0.4);
+  padding: 50px;
+  margin-bottom: 50px;
 }
 
 .about__text-skill {
@@ -160,23 +177,24 @@ ul {
 
 .about__img {
   border-radius: 100%;
-  width: 480px;
+  width: 370px;
   height: auto;
 }
 
 .about__header {
-  font-size: 60px;
+  font-size: 40px;
   color: #c7caca;
   margin-bottom: 20px;
 }
 
 .about__text {
-  font-size: 36px;
+  font-size: 30px;
   color: #c7caca;
   margin-bottom: 20px;
+  line-height: 28px;
 }
 .about__description {
-  font-size: 23px;
+  font-size: 20px;
   color: #c7caca;
   margin-bottom: 30px;
 }
@@ -203,7 +221,7 @@ ul {
   padding-top: 46px;
   background-color: #3d3d3d;
   border-radius: 30px;
-  padding: 36px 60px 0px 60px;
+  padding: 36px 40px 0px 40px;
 }
 
 .works {
@@ -228,8 +246,8 @@ ul {
 
 .works__item {
   margin-bottom: 54px;
-  width: 645px;
-  min-height: 345px;
+  width: 580px;
+  min-height: 260px;
 }
 
 .works__link {
@@ -241,19 +259,18 @@ ul {
   border-radius: 20px;
   background-image: url("/img/react-bg.png");
   background-repeat: no-repeat;
-  background-position-x: -217%;
-  background-position-y: -19%;
+  background-position-x: -261%;
+  background-position-y: 14%;
   background-size: 87%;
   background-color: #555657;
-  padding: 40px;
+  padding: 20px;
 }
 
 .works__img {
   float: right;
-  width: 244px;
+  width: 210px;
   height: auto;
   border-radius: 33px;
-  margin: 0px 0px 20px 20px;
   transition: transform .5s ease-in-out;
   box-shadow: 0px 12px 17px 0px rgb(47 46 44);
 }
@@ -266,7 +283,7 @@ ul {
 .works__subtitle {
   color: #8ecaff;
   font-size: 38px;
-  line-height: 30px;
+  line-height: 50px;
   margin-bottom: 20px;
 }
 
@@ -286,13 +303,13 @@ ul {
 
 .tiny-header {
   color: #ffffff;
-  line-height: 42px;
-  font-size: 25px;
+  line-height: 28px;
+  font-size: 21px;
 }
 
 .works__desc-adaptive {
   color: #ffee89;
-  font-size: 20px;
+  font-size: 30px;
   margin-bottom: 10px;
 }
 
@@ -306,32 +323,81 @@ ul {
 }
 
 
-/* FOOTER */
-
-.footer {
-   padding: 50px;
-}
-
-.footer__container {
-   justify-content: space-between;
-   align-items: center;
-}
-
-.footer__disigned {
-   color: rgba(255, 255, 255, 0.4);
-   font-family: 'Lato';
-   font-size: 12px;
-   font-weight: 400;
-}
-
-.footer__copyright {
-   color: rgba(255, 255, 255, 0.4);
-   font-family: 'Lato';
-   font-size: 12px;
-   font-weight: 400;
-}
-
 /* MENU */
+
+/* ABOUT */
+
+.about-me {
+  height: 100%;
+  /* background-color: rgba(0,0,0, 0.4); */
+  background-color: #e9e9e9;
+  padding: 50px;
+  margin-bottom: 50px;
+  display: block;
+  border-radius: 34px;
+}
+
+.header-about, .header-about__color {
+  font-size: 66px;
+  color: #5f98ca;
+  margin-bottom: 36px;
+}
+
+.header-about__color {
+  color: #b87e97;
+}
+
+.about-text {
+  font-size: 21px;
+  color: #383838;
+  /* background-color: #dcfff8; */
+  /* margin-bottom: 20px; */
+  margin-top: 20px;
+}
+
+.link-resume {
+  font-size: 23px;
+  color: rgb(0 0 0);
+  background-color: #affff0;
+  border-radius: 1px solid;
+  margin-bottom: 20px;
+}
+
+/* CONTACTS */
+
+.contacts {
+  width: 100%;
+  background-color: #3d3d3d;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 30px;
+}
+
+.tel {
+  font-size: 32px;
+  font-weight: bold;
+  color: #dad37e;
+  margin-right: 20px;
+}
+
+.tg {
+  background: url(./img/tg.png);
+  margin-right: 20px;
+}
+
+.gm {
+  background: url(./img/gm.png);
+}
+
+.tg, .gm {
+  width: 50px;
+  height: 50px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
 
 
 @media (max-width: 1024px) {
